fix: badge-wrappe width

--- a/scss/customHeader.scss
+++ b/scss/customHeader.scss
@@ -211,6 +211,7 @@
         padding-left: 0;
       }
       .badge-wrapper {
+        width: 100%;
         padding-left: 0;
         font-size: 1rem;
         .badge-category-bg,
